<resources>
    <string name="app_name">Mindful Matters</string>
    <string name="title">mindful matters;</string>
    <string name="quiz_name">START QUIZ</string>
    <string name="title_1_screen">1\nNot at\nall</string>
    <string name="title_2_screen">2\nSeveral\ndays</string>
    <string name="title_3_screen">3\nMore than\nhalf the days</string>
    <string name="title_4_screen">4\nNearly\nevery day</string>
    <string name="screen_title">Over the last 2 weeks, how often have you been bothered by any of the following problems?</string>
    <string name="submit">Submit</string>
    <string name="daily_question1">How are you feeling today?</string>
    <string name="daily_question2">How much physical activity did you do today?</string>
    <string name="daily_question3">How much sleep did you get last night?</string>
    <string name="daily_question4">How many servings of fruits and vegetables did you eat today?</string>
    <string name="q1_1">Very sad</string>
    <string name="q1_2">Slightly sad</string>
    <string name="q1_3">Slightly happy</string>
    <string name="q1_4">Very happy</string>
    <string name="q2_1">0&#8211;30 min</string>
    <string name="q2_2">30&#8211;60 min</string>
    <string name="q2_3">60&#8211;90 min</string>
    <string name="q2_4">90+ min</string>
    <string name="q3_1">0&#8211;3 hours</string>
    <string name="q3_2">4&#8211;5 hours</string>
    <string name="q3_3">6&#8211;8 hours</string>
    <string name="q3_4">9+ hours</string>
    <string name="q4_1">0&#8211;2 servings</string>
    <string name="q4_2">3&#8211;5 servings</string>
    <string name="q4_3">6&#8211;8 servings</string>
    <string name="q4_4">9+ servings</string>
    <string name="history">HISTORY</string>
    <string name="resources">RESOURCES</string>
    <string name="lifestyle">1. Get sleep\n
    Go to bed at the same time each day, turn off the screens a bit earlier than normal, and look into light therapy if your work schedule means you don’t get much sunlight.\n
    2. Be active\n
    Exercise is incredibly valuable, not only for general health, but for its mood-boosting effects. You don’t need to run a marathon to reap the benefits of exercise. Just 15 minutes of physical activity a day can significantly reduce cortisol levels.\n
    3. Regulate your blood sugar\n
    Have you ever eaten a sugary snack, only to find yourself starving and miserable an hour later? What goes up must come down, and a blood sugar spike followed by a crash is a one-way ticket to a lousy mood. Make sure to eat regular meals and snacks, including a good source of protein at every one.\n
    4. Eat healthy fats\n
    Eat more of foods rich in omega-3 polyunsaturated fatty acids. Eg. salmon, trout and sardines, flaxseeds, walnuts.\n
    5. Spend more time doing what you love\n
    Finding activities you enjoy that give you a sense of purpose is a surefire way to improve your mood.</string>
    <string name="online">NIMH Information Resource Center\n
Telephone:\n
* 1-866-615-6464 (toll-free)\n
* 1-301-443-8431 (TTY)\n
* 1-866-415-8051 (TTY toll-free)\n
Available in English and Spanish\n
Monday through Friday 8:30 a.m. to 5:00 p.m. Eastern Time\n


NIMH has a variety of publications on depression available at <a href='www.nimh.nih.gov/health/publications/depression-listing.shtml'>www.nimh.nih.gov/health/publications/depression-listing.shtml.</a> If you need additional information and support, you may find the following resources to be helpful.
\n
        Call the 24-hour, toll-free confidential National Suicide Prevention Lifeline at 1-800-273-TALK (8255) or go to <a href='www.suicidepreventionlifeline.org'>www.suicidepreventionlifeline.org</a>
    Anxiety and Depression Association of America
The ADAA website offers information about depression and anxiety on their website, as well as a database of mental health providerslicensed to treat depression, anxiety, and other  mental disorders. You can type in your zip code to get a list of providers in your area.
\n
Mental Health America\n
Mental Health America provides screening tools for a variety of mental disorders. The organization’s website provides information about mental health for a wide variety of people, from college students to military families.
\n
Postpartum Support International\n
Approximately 15 percent of women experience depression during pregnancy or after having a baby. PSI’s website contains information about postpartum depression and treatment, and can connect users to support groups in their areas.
\n
The Trevor Project\n
The Trevor Project offers crisis intervention and suicide prevention services to LGBTQ people, ages 13-24. The Trevor Project offers a 24/7 crisis intervention hotline (1-866-488-7386), and lets LGBTQ teens and young adults talk to counselors through free online chat and texting services.
\n
ULifeline\n
ULifeline is a project of the JED Foundation aimed at providing college students with resources for dealing with depression and other mental illnesses. ULifeline offers confidential self-evaluationsinto which  you can enter the name of your university; the website can then provide you with information about all the resources available to you at your school.
\n
Erika’s Lighthouse\n
Erika’s Lighthouse is an organization dedicated to helping adolescents and teenagers cope with depression. Visit the websitefor  information about how teens can identify, cope with, and treat depression, as well resources for parents of adolescents struggling with depression.</string>
</resources>
