<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.whack.janson.mindfulmatters.DailyActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/daily_question1"
            android:textSize="24sp"
            android:layout_margin="10dp"/>
        <RadioGroup
            android:id="@+id/quiz_rg1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="start"
            android:layout_below="@+id/question1"
            android:layout_centerHorizontal="true">

            <RadioButton
                android:id="@+id/rg11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_1"
                android:layout_marginStart="10dp"
                android:textSize="18sp"/>
            <RadioButton
                android:id="@+id/rg12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/q1_2"
                android:textSize="18sp"/>
            <RadioButton
                android:id="@+id/rg13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/q1_3"
                android:textSize="18sp"/>
            <RadioButton
                android:id="@+id/rg14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/q1_4"
                android:textSize="18sp"/>
        </RadioGroup>
        <TextView
            android:id="@+id/question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/daily_question2"
            android:textSize="24sp"
            android:layout_margin="10dp"
            android:layout_below="@id/quiz_rg1"/>

        <RadioGroup
            android:id="@+id/quiz_rg2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="start"
            android:layout_below="@+id/question2"
            android:layout_centerHorizontal="true">

            <RadioButton
                android:id="@+id/rg21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_1"
                android:layout_marginStart="10dp"
                android:textSize="18sp"/>
            <RadioButton
                android:id="@+id/rg22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/q2_2"
                android:textSize="18sp"/>
            <RadioButton
                android:id="@+id/rg23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/q2_3"
                android:textSize="18sp"/>
            <RadioButton
                android:id="@+id/rg24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/q2_4"
                android:textSize="18sp"/>
        </RadioGroup>
        <TextView
            android:id="@+id/question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/daily_question3"
            android:textSize="24sp"
            android:layout_below="@id/quiz_rg2"
            android:layout_margin="10dp"/>
        <RadioGroup
            android:id="@+id/quiz_rg3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="start"
            android:layout_below="@+id/question3"
            android:layout_centerHorizontal="true">

            <RadioButton
                android:id="@+id/rg31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_1"
                android:layout_marginStart="10dp"
                android:textSize="18sp"/>
            <RadioButton
                android:id="@+id/rg32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/q3_2"
                android:textSize="18sp"/>
            <RadioButton
                android:id="@+id/rg33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/q3_3"
                android:textSize="18sp"/>
            <RadioButton
                android:id="@+id/rg34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/q3_4"
                android:textSize="18sp"/>
        </RadioGroup>
        <TextView
            android:id="@+id/question4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/daily_question4"
            android:textSize="24sp"
            android:layout_margin="10dp"
            android:layout_below="@id/quiz_rg3"/>

        <RadioGroup
            android:id="@+id/quiz_rg4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="start"
            android:layout_below="@+id/question4"
            android:layout_centerHorizontal="true">

            <RadioButton
                android:id="@+id/rg41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_1"
                android:layout_marginStart="10dp"
                android:textSize="18sp"/>
            <RadioButton
                android:id="@+id/rg42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/q4_2"
                android:textSize="18sp"/>
            <RadioButton
                android:id="@+id/rg43"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/q4_3"
                android:textSize="18sp"/>
            <RadioButton
                android:id="@+id/rg44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/q4_4"
                android:textSize="18sp"/>
        </RadioGroup>

        <TextView
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:textSize="24sp"
            android:text="@string/submit"
            android:layout_below="@id/quiz_rg4"/>
    </RelativeLayout>
</ScrollView>
