<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.whack.janson.mindfulmatters.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dp"
        android:textSize="40sp"
        android:text="@string/title"
        android:gravity="center"/>

    <TextView
        android:id="@+id/start_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerInParent="true"
        android:text="@string/quiz_name"
        android:textSize="30sp"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_quiz"
        android:layout_centerInParent="true"
        android:text="@string/history"
        android:layout_margin="10dp"
        android:textSize="30sp"/>


    <TextView
        android:id="@+id/resources"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/history"
        android:layout_centerInParent="true"
        android:text="@string/resources"
        android:textSize="30sp"/>

</RelativeLayout>
